--- a/blocks/marquee/marquee.css
+++ b/blocks/marquee/marquee.css
@@ -1,13 +1,7 @@
-.section.marquee-container{
-  padding: 0;
-}
-.section > .marquee-wrapper{
-  max-width: 100%;
-}
 .marquee {
   min-height: 560px;
   position: relative;
-  color: #000;
+  color: #FFF;
   display: flex;
 }
 
@@ -19,13 +13,27 @@
   min-height: 360px;
 }
 
-.marquee.large {
-  min-height: 700px;
-}
-
 .marquee.centered {
   text-align: center;
 }
+
+.marquee.large {
+min-height: auto;
+display: block;
+color: #000;
+}
+.marquee.light.large {
+color: #000;
+}
+
+.marquee.large .foreground {
+margin-top: var(--spacing-m);
+}
+.marquee.large .background picture {
+position: relative;
+}
+
+
 
 .marquee .background picture {
   display: block;
@@ -87,17 +95,44 @@
   display: block;
   width: 100%;
 }
-
-@media screen and (min-width: 800px) {
-  .marquee .foreground {
-      display: flex;
-      width: 800px;
-      margin: 16px auto;
-  }
+/* desktop */
+@media only screen and (min-width: 1400px) {
+.marquee .foreground {
+  display: flex;
 }
-@media screen and (min-width: 1200px) {
-  .marquee .foreground {
-      width: 1200px;
-      margin: 24px auto;
-  }
+.marquee.large .background picture {
+  position: absolute;
+}
+.marquee.large {
+  display: flex;
+  min-height: 700px;
+  color: #FFF;
+}
+
+.marquee.large .con-button.outline {
+  color: var(--theme-color-light);
+  border: 2px solid var(--theme-color-light);
+}
+.marquee.large .con-button.outline:hover,
+.marquee.large .con-button.outline:active {
+  color: var(--theme-color-dark);
+  background: var(--theme-color-light);
+}
+
+.marquee.large.light .con-button.outline {
+  color: var(--theme-color-dark);
+  border: 2px solid var(--theme-color-dark);
+}
+.marquee.large.light .con-button.outline:hover,
+.marquee.large.light .con-button.outline:active {
+  color: var(--theme-color-light);
+  background: var(--theme-color-dark);
+}
+
+.marquee.large .foreground {
+  margin-top: 0;
+}
+.marquee.large .foreground.container {
+  min-width: 1200px;
+}
 }
