--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,7 +1,8 @@
 main .form-container .form-wrapper {
-  background-color: white;
-  padding: var(--spacing-m);
-  box-shadow: 0px 1px 6px rgb(34 34 34 / 10%);
+  display: flex;
+  flex-direction: column;
+  margin: 2rem auto;
+  max-width: 50rem;
 }
 
 main .form-wrapper h2 {
@@ -56,7 +57,9 @@ main .form-wrapper label.required::after {
 }
 
 main .form-wrapper .field-wrapper {
-  margin-bottom: 20px;
+  margin: 0 0 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 main .form-wrapper .form-checkbox-wrapper {
