--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -107,7 +107,41 @@ main .form-wrapper .button {
   font-family: 'adobe-clean', 'Trebuchet MS', sans-serif;
 }
 
+main .form-wrapper .form-rating-set-wrapper {
+  font-size: var(--type-body-s-size);
+  color: rgb(193,193,195);
+  display: flex;
+}
+
+main .form-wrapper .form-rating-results {
+  margin: 0.2em 0 0 0.5em;
+}
+
+main .form-wrapper .form-rating-set {
+  border: none;
+  padding: 0;
+  align-items: center;
+}
+
+main .form-wrapper .form-rating-set .star {
+  float: left;
+  margin-top: 5px;
+  margin-right: 5px;
+  height: 20px;
+  width: 20px;
+  content: ' ';
+  background: url('./star.svg');
+  background-size: contain;
+}
+
+main .form-wrapper .form-rating-set .star.checked {
+  background: url('./star-filled.svg');
+  background-size: contain;
+  content: ' ';
+}
+
 main .form-wrapper .form-submit-wrapper {
   display: flex;
   justify-content: flex-end;
+  /* align-items: flex-end; */
 }
