--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -107,6 +107,12 @@ main .form-wrapper .button {
   font-family: 'adobe-clean', 'Trebuchet MS', sans-serif;
 }
 
+main .form-wrapper .button:disabled {
+  background-color: -internal-light-dark(rgba(239, 239, 239, 0.3), rgba(19, 1, 1, 0.3));
+  color: -internal-light-dark(rgba(16, 16, 16, 0.3), rgba(255, 255, 255, 0.3));
+  border-color: -internal-light-dark(rgba(118, 118, 118, 0.3), rgba(195, 195, 195, 0.3));
+}
+
 main .form-wrapper .form-rating-set-wrapper {
   font-size: var(--type-body-s-size);
   color: rgb(193,193,195);
